--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <meta charset="utf-8" />
 <meta http-equiv="refresh" content="0; url=./pages/index.html" />
 <link rel="canonical" href="./pages/index.html" />
+ -->
