--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-    <%- include('./layout/header'); -%>
+    <%- include('/layout/header.ejs'); -%>
 
     <!-- 行動版首頁(Only): 商品列表、品牌故事連結 -->
     <div class="d-none d-sm-block">
@@ -242,6 +242,6 @@
 
     <%- include('./layout/footer'); -%>
 
-    <script type="module" src="../main.js"></script>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
