--- a/pages/product.html
+++ b/pages/product.html
@@ -13,7 +13,7 @@
     <title>URBNSTEP | 品牌故事</title>
   </head>
   <body>
-    <%- include('./layout/header'); -%>
+    <%- include('/layout/header.ejs'); -%>
 
     <main class="container mb-40">
       <div class="row py-64">
@@ -227,6 +227,6 @@
 
     <%- include('./layout/footer'); -%>
 
-    <script type="module" src="../main.js"></script>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
