--- a/pages/products.html
+++ b/pages/products.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-    <%- include('./layout/header'); -%>
+    <%- include('/layout/header.ejs'); -%>
 
     <main class="container py-32 py-md-16 mb-48 mb-md-24">
       <!-- 麵包屑導覽列 -->
@@ -146,6 +146,6 @@
 
     <%- include('./layout/footer'); -%>
 
-    <script type="module" src="../main.js"></script>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
