--- a/pages/story.html
+++ b/pages/story.html
@@ -13,7 +13,7 @@
     <title>URBNSTEP | 品牌故事</title>
   </head>
   <body>
-    <%- include('/layout/header.ejs'); -%>
+    <%- include('./layout/header'); -%>
 
     <div class="header">
       <h1 class="h1 h3-md text-white">
@@ -106,7 +106,7 @@
 
     <%- include('./layout/footer'); -%>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="../main.js"></script>
     <!-- <div class="bg-neutral-100 py-64 text-sm text-neutral-600 footer">
       <p class="mb-4">Copyright ©2025 URBNSTYLE</p>
       <p>All Rights Reserved.</p>
