調整圖片路徑

--- a/pages/index.html
+++ b/pages/index.html
@@ -184,35 +184,35 @@
           <div class="inspiration-col-4">
             <div class="inspiration-row">
               <div class="inspiration-col-6">
-                <img src="/assets/images/inspiration-1.png" alt="inspiration-1">
+                <img src="../assets/images/inspiration-1.png" alt="inspiration-1">
               </div>
               <div class="inspiration-col-6">
-                <img src="/assets/images/inspiration-2.png" alt="inspiration-2">
+                <img src="../assets/images/inspiration-2.png" alt="inspiration-2">
               </div>
               <div class="inspiration-col-12">
-                <img src="/assets/images/inspiration-3.png" alt="inspiration-3">
+                <img src="../assets/images/inspiration-3.png" alt="inspiration-3">
               </div>
             </div>
           </div>
           <div class="inspiration-col-4">
             <div class="inspiration-row">
               <div class="inspiration-col-6">
-                <img src="/assets/images/inspiration-4.png" alt="inspiration-4">
+                <img src="../assets/images/inspiration-4.png" alt="inspiration-4">
               </div>
               <div class="inspiration-col-6">
-                <img src="/assets/images/inspiration-5.png" alt="inspiration-5">
+                <img src="../assets/images/inspiration-5.png" alt="inspiration-5">
               </div>
               <div class="inspiration-col-6">
-                <img src="/assets/images/inspiration-6.png" alt="inspiration-6">
+                <img src="../assets/images/inspiration-6.png" alt="inspiration-6">
               </div>
               <div class="inspiration-col-6">
-                <img src="/assets/images/inspiration-7.png" alt="inspiration-7">
+                <img src="../assets/images/inspiration-7.png" alt="inspiration-7">
               </div>
               <div class="inspiration-col-6">
-                <img src="/assets/images/inspiration-8.png" alt="inspiration-8">
+                <img src="../assets/images/inspiration-8.png" alt="inspiration-8">
               </div>
               <div class="inspiration-col-6">
-                <img src="/assets/images/inspiration-9.png" alt="inspiration-9">
+                <img src="../assets/images/inspiration-9.png" alt="inspiration-9">
               </div>
             </div>
             
