調整圖片路徑

--- a/pages/index.html
+++ b/pages/index.html
@@ -220,13 +220,13 @@
           <div class="inspiration-col-4">
             <div class="inspiration-row">
               <div class="inspiration-col-12">
-                <img src="/assets/images/inspiration-10.png" alt="inspiration-10">
+                <img src="../assets/images/inspiration-10.png" alt="inspiration-10">
               </div>
               <div class="inspiration-col-6">
-                <img src="/assets/images/inspiration-11.png" alt="inspiration-11">
+                <img src="../assets/images/inspiration-11.png" alt="inspiration-11">
               </div>
               <div class="inspiration-col-6">
-                <img src="/assets/images/inspiration-12.png" alt="inspiration-12">
+                <img src="../assets/images/inspiration-12.png" alt="inspiration-12">
               </div>
             </div>
           </div>
